@@ -93,6 +93,7 @@ All tools:
 - PR#4857: add a -vnum option to display the version number and nothing else
 
 Bug Fixes:
+- PR#4478: better error messages for type definition mismatches
 - PR#5057: fatal typing error with local module + functor + polymorphic variant
 - PR#4742: finalisation function raising an exception blocks other finalisations
 - PR#4775: compiler crash on crazy types (temporary fix)
